--- a/style.css
+++ b/style.css
@@ -78,12 +78,12 @@ h3{
 }
 .sectionBio{
     height: 100vh;
-    color: whitesmoke;
-    background-image:linear-gradient(to bottom, rgba(28, 30, 31, 0.5),rgb(28, 30, 31));
+    color: black;
+    background-color:rgb(235, 229, 226);
 }
 .pbio{
     padding-top: 35px;
-    color: rgb(243, 243, 243);
+    color: rgb(15, 15, 15);
   }
 p{
     padding-left: 7vw;
@@ -95,7 +95,7 @@ p{
     height: auto;
     padding-bottom: 50px;
     text-align: justify !important;
-    background-color: black
+    background-color: black;
 }
 .h2Personagem{
     text-align: center !important;
@@ -109,13 +109,14 @@ p{
 .articleQuali{
     text-align: center !important;
     width: 50%;
-    background-color: rgb(27, 27, 27);
+    background-color: rgb(235, 229, 226);
+    color: black;
 }
 .articleHabili{
     text-align: center !important;
     width: 50%;
     color: whitesmoke;
-    background-color: rgb(28, 30, 31);
+    background-color: rgb(25, 30, 32);
 }
 .pcaracteristicas{
     text-align: justify;
@@ -124,6 +125,9 @@ p{
     text-align: center !important;
     flex-basis: 50%;
     color: whitesmoke;
+}
+.pqualidades{
+    color: black;
 }
 /*página sobre*/
 .sectionSobre{
