--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+@font-face {
+    font-family: "compacta-bold-italic-bt";
+    src: url(assets/compacta-bold-italic-bt.ttf);
+}
 
 /*Geral*/
 *{
@@ -16,7 +21,7 @@ html{
     font-size: calc(0.8vw + 1.3vh); 
     font-weight: 300;
 }
-body{
+body:not(h1){
     color: whiteSmoke;
     display: flex;
     flex-direction: column;
@@ -50,55 +55,83 @@ nav{
 }
 a{
     text-decoration: none;
-    color: rgb(194, 208, 214);
+    color: rgb(179, 179, 179);
 }
 a:hover{
     text-decoration: none;
-    color: rgb(223, 199, 199);
+    color: rgba(0, 238, 255, 0.493);
 }
 h1{
-    background: -webkit-linear-gradient(45deg,rgba(0, 92, 92, 0.8), pink);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #008b8b90;
     font-weight: 100;
     justify-content: left;
     font-size: calc(8vw + 8vh);
-    line-height: 80vh;    font-family: 'Bangers', cursive;
-
+    line-height: 80vh;    
+    font-family: "compacta-bold-italic-bt";
 }
 h2, h3{
     padding-top: 50px;
 }
-h3{
-    font-weight: 400;
+h2{
+    font-size: calc(1.8vw + 1.5vh); 
+    /*font-family: 'Bangers', cursive;*/
+    font-family: "compacta-bold-italic-bt";
 }
-#idObj, #idCarac{
+h3{
+    font-weight: 500;
+    color: #dde4eb;
+}
+svg{
+    opacity: 0.4;
+    position: absolute;
+    color: yellow;
+    top: 80%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+svg:hover{
+    color: #008b8b90;
+}
+#idObj, #idCarac, #idHabili{
     padding-top: 25px;
     padding-left: 7vw;
 }
+.slider {
+	overflow-y: hidden;
+	max-height: 500px; /* approximate max height */
+
+	transition-property: all;
+	transition-duration: .5s;
+	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
 .sectionBio{
     height: 100vh;
-    color: black;
-    background-color:rgb(235, 229, 226, 0.9);
+    background-color: #000e0e;
+    background-image: radial-gradient(circle at center, #000e0e, #070707);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .pbio{
     padding-top: 35px;
-    color: rgb(15, 15, 15);
   }
+.pbio::first-letter{
+    font-size: 2rem;
+}
 p{
     padding-left: 7vw;
     padding-right: 7vw;
     padding-top: 15px;
     text-align: justify;
 }
+.h2Personagem{
+    text-align: center !important;
+}
 .sectionPersonagem{
     height: auto;
     padding-bottom: 50px;
     text-align: justify !important;
-    background-color: black;
-}
-.h2Personagem{
-    text-align: center !important;
+    background-color: #070707;
 }
 .container{
     display: flex;
@@ -109,25 +142,22 @@ p{
 .articleQuali{
     text-align: center !important;
     width: 50%;
-    background-color: rgb(235, 229, 226,0.9);
+    background-color: #000e0e;
     color: black;
 }
-.articleHabili{
+.articleDefeitos{
     text-align: center !important;
     width: 50%;
     color: whitesmoke;
-    background-color: rgb(25, 30, 32);
+    background-color: #000e0e;
 }
-.pcaracteristicas{
+.pcaracteristicas, .phabilidades{
     text-align: justify;
 }
- .pqualidades, .phabilidades{
+ .pqualidades, .pdefeitos{
     text-align: center !important;
     flex-basis: 50%;
     color: whitesmoke;
-}
-.pqualidades{
-    color: black;
 }
 /*página sobre*/
 .sectionSobre{
@@ -136,6 +166,9 @@ p{
     height: auto;
     padding-bottom: 50px;
     color: whitesmoke;
+}
+#titleSobre{
+    font-family: Arial, Helvetica, sans-serif;
 }
 #gif{
     padding-top: 50px;
@@ -158,8 +191,11 @@ p{
 #btnVoltar{
     padding-top: 50px;
 }
+hr{
+    border-color: rgb(40, 180, 199);
+}
 footer{
-    background-color: black;
+    background-color: #070707;
     display: flex;
     margin-top: auto;
     justify-content: center;
