--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html{
     font-size: calc(0.5vw + 1.35vh); 
     font-weight: 300;
 }
-body:not(h3){
+body{
     color: whiteSmoke;
     display: flex;
     flex-direction: column;
@@ -119,8 +119,8 @@ svg:hover{
 }
 .sectionBio{
     min-height: auto;
-    background-color: whitesmoke;
-    color: black;
+    background-image: linear-gradient(black, #101212);
+    color: white;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -136,6 +136,7 @@ p{
     padding-right: 7vw;
     padding-top: 25px;
     text-align: justify;
+    color: rgb(216, 216, 216);
 }
 .h2Personagem{
     text-align: center;
@@ -143,7 +144,7 @@ p{
 .sectionPersonagem{
     height: auto;
     padding-bottom: 75px;
-    background-color: #101310;
+    background-image: linear-gradient(#101212, black);
 }
 .container{
     display: flex;
@@ -153,12 +154,12 @@ p{
 }
 .articleQuali{
     width: 50%;
-    background-color: #122728;
+    background-color: black;
     padding-bottom: 75px;
 }
 .articleDefeitos{
     width: 50%;
-    background-color: #122728;
+    background-color: black;
     padding-bottom: 75px;
 }
 .pcaracteristicas, .phabilidades{
@@ -166,7 +167,7 @@ p{
 }
  .pqualidades, .pdefeitos{
     text-align: center;
-    background-color: #122728;
+    background-color: black;
 }
 hr{
     border-color: rgb(40, 180, 199);
@@ -178,15 +179,15 @@ hr{
 }
 .secGosta{
     height: auto;
-    padding-bottom: 75px;
-    background-color: #101310;
+    padding-bottom: 15px;
+    background-image: linear-gradient(black, #101212);
 }
 .secSites{
-    background-color: #122728;
+    background-color: #101212;
 }
 .ulSites{
-    margin-top: 25px;
-    padding-bottom: 75px;
+    padding-top: 35px;
+    padding-bottom: 50px;
     justify-content: center;
     padding-left: 0px;
 }
